# kernel

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  kernelconfig.hpp  main.cpp  main.hpp  stagechain.cpp  stagechain.hpp
HWRC/: CMakeLists.txt  hwrctypes.hpp  kernel_config.hpp  start_kernel.cpp  start_kernel.hpp
HWRC/arch/amd64/: CMakeLists.txt
HWRC/bootway/: CMakeLists.txt
HWRC/bootway/infsrc/: infsrc.cpp
HWRC/common/acpi/: acpi.hpp
HWRC/hwresources/HWRCMemory/: CMakeLists.txt  HWRCMemory.cpp  HWRCMemory.hpp  alloc_impl.cpp
HWRC/hwresources/cpu/: core.hpp  cpu.hpp
HWRC/hwresources/mem/: alloc_impl.cpp
HWRC/initstage/: CMakeLists.txt  start_initstage.cpp
HWRC/initstage/memoryblocks/: mem_block.cpp  mem_block.hpp
HWRC/initstage/subsystems/: memory_subsystem_init.hpp  subsystems_init.cpp  subsystems_init.hpp  virtsystems_init.cpp  vmem_subsystem_init.cpp  vmem_subsystem_init.hpp
HWRC/initstage/utility/: alignment.cpp  memory_morph.cpp  memory_morph.hpp
HWRC/tasks/: sheduler.hpp  task.hpp
HWRC/virtualsubsystems/: virtualsubsystems.cpp
HWRC/virtualsystems/: virtualsystems.cpp  virtualsystems.hpp
applications/shell/: CMakeLists.txt  shell.cpp  shell.hpp
docs/: memory.md
hyperium/: CMakeLists.txt  hyperiumcalls.hpp  hyperiumtypes.hpp
hyperium/arch/amd64/: CMakeLists.txt
hyperium/common/acpi/: acpi.cpp  acpi.hpp
hyperium/hwresources/mem/: alloc_impl.cpp  allocators.hpp  ksa.cpp  ksa.hpp  memblk.hpp  mempage.hpp  memradar.cpp  memradar.hpp  memregion.cpp  memregion.hpp  ppages.hpp
hyperium/sysroots/: rootpool.hpp  sysroot.cpp  sysroot.hpp
hyperium/vmachine/: vmachine.cpp  vmachine.hpp
initstage/: CMakeLists.txt  start_initstage.cpp  start_initstage.hpp
initstage/arch/amd64/: CMakeLists.txt
initstage/base/: CMakeLists.txt  initstage-config.hpp
initstage/base/infsrc/: CMakeLists.txt
initstage/base/memoryblocks/: CMakeLists.txt  mem_block.cpp  mem_block.hpp
initstage/base/utility/: CMakeLists.txt  alignment.cpp  memory_morph.cpp  memory_morph.hpp
initstage/infsrc/: infsrc.hpp
initstage/memoryblocks/: CMakeLists.txt  mem_block.cpp  mem_block.hpp
initstage/subsystems/: memory_subsystem_init.cpp  memory_subsystem_init.hpp  subsystems_init.hpp  virtsystems_init.cpp  virtsystems_init.hpp  vmem_subsystem_init.cpp  vmem_subsystem_init.hpp
initstage/tests/: CMakeLists.txt  run_all_tests.cpp
initstage/tests/memoryblocks/: blkbubblearray_unittests.cpp
initstage/utility/: CMakeLists.txt  alignment.cpp  alignment.hpp  memory_morph.cpp
kernel-hlvl/: CMakeLists.txt  start_kernel.cpp  start_kernel.hpp
kernel-hlvl/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp
kernel-hlvl/cpu/apic/: apic.cpp  apic.hpp
kernel-hlvl/cpucontrol/: cpu.hpp  cpumanager.hpp
kernel-hlvl/device/: CMakeLists.txt  devices.hpp
kernel-hlvl/device/framebuffer/: framebuffer.cpp  framebuffer.hpp
kernel-hlvl/device/i8042/: i8042.cpp  i8042.hpp
kernel-hlvl/device/keyboard/: kb.hpp
kernel-hlvl/devices/apic/: apic.cpp  apic.hpp
kernel-hlvl/drivermodel/: CMakeLists.txt  drivermodel.hpp
kernel-hlvl/drivermodel/kb/: kbdriver.cpp  kbdriver.hpp
kernel-hlvl/interrupts/: CMakeLists.txt  interrupts.cpp  interrupts.hpp  trapframe.hpp
kernel-hlvl/interrupts/idt/: idt.cpp  idt.hpp
kernel-hlvl/interrupts/isr/: isr.cpp  isr.hpp
kernel-hlvl/memorycontrol/: CMakeLists.txt  memory.hpp
kernel-hlvl/memorycontrol/kba/: CMakeLists.txt  bufferinfo.cpp  bufferinfo.hpp  kba.cpp  kba.hpp
kernel-hlvl/memorycontrol/koa/: CMakeLists.txt  allocatable.cpp  allocatable.hpp  koa.cpp  koa.hpp  koapage.cpp  koapage.hpp  koapagepool.cpp  koapagepool.hpp
kernel-hlvl/memorycontrol/layout/: CMakeLists.txt
kernel-hlvl/memorycontrol/ppa/: CMakeLists.txt  ppa.cpp  ppa.hpp
kernel-hlvl/subsystems/: CMakeLists.txt  subsystems.hpp
kernel-hlvl/subsystems/fs/: CMakeLists.txt  filesystem.cpp  filesystem.hpp  fs.cpp  fs.hpp  fsnode.cpp  fsnode.hpp
kernel-hlvl/subsystems/input/: input.cpp  input.hpp
kernel-hlvl/subsystems/logger/: CMakeLists.txt  logger.cpp  logger.hpp
kernel-hlvl/subsystems/terminal/: cursor.cpp  cursor.hpp  terminal.cpp  terminal.hpp
kernel-hlvl/subsystems/video/: video.hpp
kernel-hlvl/tasks/: CMakeLists.txt  scheduler.cpp  scheduler.hpp  task.cpp  task.hpp  taskcontext.cpp  taskcontext.hpp  worker.cpp  worker.hpp
kernel-hlvl/tasks/space/: space.cpp  space.hpp
kernel-hlvl/tasks/testtasks/: testtasks.cpp  testtasks.hpp
kernel-hlvl/tasks/worker/: worker.cpp  worker.hpp  workercontext.hpp
kernel-hlvl/terminal/: CMakeLists.txt  cursor.hpp  terminal.cpp  terminal.hpp
kernel-hlvl/userspace/syscalls/: syscalls.hpp
kernel-hlvl/utils/: CMakeLists.txt  utils.cpp  utils.hpp
kernel-hlvl/utils/logger/: logger.cpp
kernel-hlvl/virtualdevice/: CMakeLists.txt  virtualdevice.hpp
kernel-hlvl/virtualdevice/input/: CMakeLists.txt  input.cpp  input.hpp
kernel-hlvl/virtualdevice/terminal/: CMakeLists.txt  cursor.cpp  cursor.hpp  terminal.cpp  terminal.hpp
kernel-hlvl/virtualdevice/video/: CMakeLists.txt  video.hpp
kernel-launcher/: CMakeLists.txt  start.cpp  start.hpp
kernel-launcher/initstage/: CMakeLists.txt  start_initstage.cpp  start_initstage.hpp
kernel-launcher/initstage/arch/: CMakeLists.txt
kernel-launcher/kl-launch/: CMakeLists.txt  ctxswitch.cpp  ctxswitch.hpp
kernel-launcher/kl-transformation/: CMakeLists.txt  start_transformation.cpp  start_transformation.hpp
kernel-launcher/lowlvl-start/: CMakeLists.txt
loaders/: CMakeLists.txt
loaders/grub/: multiboot.cpp  multiboot.hpp
lowlvl-start/: CMakeLists.txt  start.cpp
lowlvl-start/ctxswitch/: ctxswitch.cpp
middlestage/: CMakeLists.txt
stagechain-start/: CMakeLists.txt
start/ctxswitch/: CMakeLists.txt  ctxswitch.cpp  ctxswitch.hpp
thinlibcxx/: CMakeLists.txt  cstdint.hpp  cstring.cpp  cstring.hpp  hwtypes.hpp  memory.cpp  memory.hpp  string.cpp  string.hpp
thinlibcxx/cppruntime/: placementnew.hpp
thinlibcxx/datastructures/: array.hpp  list.cpp  list.hpp  unordered_map.hpp  vector.cpp  vector.hpp
thinlibcxx/ds/: vector.hpp
thinlibcxx/unwind/: unwind.cpp  unwind.hpp
(+172 files in other folders)
